# rules_external_dependencies

./: .bazelversion  .gitignore  BUILD.bazel  README.md  WORKSPACE  internal_deps.bzl
.github/workflows/: ci.bazelrc  ci.yaml  release.yaml  release_prep.sh
cmd/parser/: BUILD.bazel  deps.bzl  go.mod  go.sum  parser.go  parser_test.go
e2e/smoke/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  dependencies.yaml  tests.yaml
examples/multi_arch/: BUILD.bazel  MODULE.bazel  README.md  defs.bzl  dependencies.yaml
external_dependencies/: WORKSPACE  binary.bzl  defs.bzl  repositories.bzl  versions.bzl
