load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "binaries",
    srcs = [
        "@goreleaser",
        "@helmfile",
        "@kubectl",
    ],
    mode = "0755",
    package_dir = "/usr/local/bin",
    tags = ["tools"],
)

oci_image(
    name = "container",
    base = "@distroless_base",
    tars = [":binaries"],
    visibility = ["//visibility:private"],
)

container_structure_test(
    name = "container_test",
    configs = [
        "@goreleaser//:tests.yaml",
        "@helmfile//:tests.yaml",
        "@kubectl//:tests.yaml",
    ],
    image = ":container",
    visibility = ["//visibility:public"],
)
