load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "binaries",
    srcs = select({
        "@platforms//cpu:arm64": [
            "@goreleaser//:goreleaser_arm64",
            "@helmfile//:helmfile_arm64",
            "@kubectl//:kubectl_arm64",
        ],
        "@platforms//cpu:x86_64": [
            "@goreleaser//:goreleaser_amd64",
            "@helmfile//:helmfile_arm64",
            "@kubectl//:kubectl_amd64",
        ],
    }),
    mode = "0755",
    package_dir = "/usr/local/bin",
    remap_paths = select({
        "@platforms//cpu:arm64": {
            "/goreleaser_arm64": "goreleaser",
            "/helmfile_arm64": "helmfile",
            "/kubectl_arm64": "kubectl",
        },
        "@platforms//cpu:x86_64": {
            "/goreleaser_amd64": "goreleaser",
            "/helmfile_amd64": "helmfile",
            "/kubectl_amd64": "kubectl",
        },
    }),
)

oci_image(
    name = "container",
    base = "@distroless_base",
    tars = [":binaries"],
    visibility = ["//visibility:private"],
)

container_structure_test(
    name = "container_test",
    configs = [
        "@goreleaser//:tests.yaml",
        "@helmfile//:tests.yaml",
        "@kubectl//:tests.yaml",
    ],
    image = ":container",
    visibility = ["//visibility:public"],
)
